Upgrade Karaf to 4.2.2
Signed-off-by: Wouter Born <eclipse@maindrain.net>