@@ -293,6 +293,12 @@ set suffix=%filename:~-4%
 if %suffix% equ .jar set CLASSPATH=%CLASSPATH%;%KARAF_HOME%\lib\boot\%filename%
 goto :EOF
 
+: APPEND_TO_JDK9PLUS_CLASSPATH
+set filename=%~1
+set suffix=%filename:~-4%
+if %suffix% equ .jar set CLASSPATH=%CLASSPATH%;%KARAF_HOME%\lib\jdk9plus\%filename%
+goto :EOF
+
 :CLASSPATH_END
 
 if "%CHECK_ROOT_INSTANCE_RUNNING%" == "" (
@@ -405,10 +411,14 @@ if "%KARAF_PROFILER%" == "" goto :RUN
         rem If major version is greater than 1 (meaning Java 9 or 10), we don't use endorsed lib but module
         rem If major version is 1 (meaning Java 1.6, 1.7, 1.8), we use endorsed lib
         if %JAVA_VERSION% GTR 8 (
+            pushd "%KARAF_HOME%\lib\jdk9plus"
+                for %%G in (*.jar) do call:APPEND_TO_JDK9PLUS_CLASSPATH %%G
+            popd
             "%JAVA%" %JAVA_OPTS% %OPTS% ^
                 --add-reads=java.xml=java.logging ^
-                --patch-module java.base=lib/endorsed/org.apache.karaf.specs.locator-4.2.1.jar ^
-                --patch-module java.xml=lib/endorsed/org.apache.karaf.specs.java.xml-4.2.1.jar ^
+                --add-exports=java.base/org.apache.karaf.specs.locator=java.xml,ALL-UNNAMED ^
+                --patch-module java.base=lib/endorsed/org.apache.karaf.specs.locator-4.2.2.jar ^
+                --patch-module java.xml=lib/endorsed/org.apache.karaf.specs.java.xml-4.2.2.jar ^
                 --add-opens java.base/java.security=ALL-UNNAMED ^
                 --add-opens java.base/java.net=ALL-UNNAMED ^
                 --add-opens java.base/java.lang=ALL-UNNAMED ^
@@ -425,7 +435,7 @@ if "%KARAF_PROFILER%" == "" goto :RUN
                 -Dkaraf.home="%KARAF_HOME%" ^
                 -Dkaraf.base="%KARAF_BASE%" ^
                 -Dkaraf.etc="%KARAF_ETC%" ^
-                -Dkaraf.logs="%OPENHAB_LOGDIR%" ^
+                -Dkaraf.log="%OPENHAB_LOGDIR%" ^
                 -Dkaraf.restart.jvm.supported=true ^
                 -Djava.io.tmpdir="%KARAF_DATA%\tmp" ^
                 -Dkaraf.data="%KARAF_DATA%" ^
@@ -440,7 +450,7 @@ if "%KARAF_PROFILER%" == "" goto :RUN
                 -Dkaraf.home="%KARAF_HOME%" ^
                 -Dkaraf.base="%KARAF_BASE%" ^
                 -Dkaraf.etc="%KARAF_ETC%" ^
-                -Dkaraf.logs="%OPENHAB_LOGDIR%" ^
+                -Dkaraf.log="%OPENHAB_LOGDIR%" ^
                 -Dkaraf.restart.jvm.supported=true ^
                 -Djava.io.tmpdir="%KARAF_DATA%\tmp" ^
                 -Dkaraf.data="%KARAF_DATA%" ^
